2004-02-09  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap, coastline, coastsegment, mapcompile, triangulate
	  - new map format
	  - added polygon triangulation code
	  - terrain map (2d) is now displayed much nicer (and faster)

2004-02-01  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - added some foam code, not yet used

2004-01-26  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* added tool for cross section computation
	* removed all VIS_CROSS_SECTION code and replaced it with real
	  cross section values (better visibility determination function
	  has still to be made)

2004-01-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp
	  - added simple hall of fame with recording and saving

2004-01-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* src/Makefile.am
	  - added missing commands about inclusion of libraries. This fixes
	    the compile problem on linux.

2004-01-19  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* widget.cpp
	  - list fixed, add-ons
	* user_interface
	  - more use of new widgets
	  - map display fix (display is faster)

2004-01-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - terrain display bugfix
	  - sky display bugfix
	* submarine_XXI.cpp
	  - torpedo creation bugfix
	* submarine_interface.cpp
	  - periscope display bugfix
	* subsim.cpp network.*
	  - add experimental network code, server/client searching and
	    connecting

2003-12-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* released 0.0.15 for linux, VC++6 couldn't compile the code.

2003-12-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* game:
	  - added read/write functions for pointer to number translation and
	    vice versa (store numbers instead of pointers in save games)
	  - removed "parent" attribute in class torpedo
	  - fixed loading and saving except of water splashes
	    now games can be saved and loaded!!! (water splashes are ignored)
	  - fixed bugs in widget and font