@@ -248,7 +248,7 @@ public:
 	virtual void planes_up(double amount);		// fixme: functions for both dive planes needed?
 	virtual void planes_down(double amount);
 	virtual void planes_middle(void);
-	virtual void dive_to_depth(unsigned meters);
+	virtual void dive_to_depth(unsigned meters);	// fixme: is this really a command?
 	// give tubenr -1 for any loaded tube, or else 0-5,
 	// and FAT values as index (primary & secondary range, initial turn, seach pattern)
 	// fixme: it would make more sense to store these values in this class rather than
